--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,3 +1,38 @@
 <!DOCTYPE html>
+<head>
+    <title>
+        AirBnB Clone Web Static 
+    </title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        header{
+            background-color: #FF0000; 
+            height: 70px; 
+            width: 100%;
+        }
+
+    footer {
+        background-color: #00FF00;  
+        bottom:0; 
+        position: fixed; 
+        height: 60px; 
+        width:100%; 
+        text-align: center;
+    }
+</style>
+</head>
+<body>
+    <!--Header-->
+    <header>
+
+    </header>
+    <!-- Footer -->
+    <footer >
+<p> Best School</p>
+    </footer>
+</body>
 
 </html>
