--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>AirBnB clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+		<link rel="shortcut icon" href="images/icon.png" >
 
 		<link rel="stylesheet" href="styles/3-common.css"/>
 		<link rel="stylesheet" href="styles/3-header.css"/>
@@ -15,7 +15,7 @@
 		</header>
 
 		<footer>
-			<p>Holberton School</p>
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
