--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -19,17 +19,17 @@
 				<button>Search</button>
 				<div class="locations">
 					<h3>States</h3>
-					<h4>California, Arizona...</h4>
+					<h4>Federal Capital, Lagos States, Osun State</h4>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
+					<h4>House Cleaning, Internet, Kitchen, Air Conditioner</h4>
 				</div>
 
 			</section>
 		</div>
 		<footer>
-			<p>Holberton School</p>
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
