--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -19,17 +19,17 @@
 				<button>Search</button>
 				<div class="locations">
 					<h3>States</h3>
-					<h4>California, Arizona...</h4>
+					<h4>FCT, Lagos, Osun...</h4>
 					<ul class="popover">
-						<li><h2>Arizona</h2>
+						<li><h2>Osun</h2>
 							<ul>
 								<li><h4>Page</h4></li>
 								<li><h4>Page2</h4></li>
 							</ul></li>
-						<li><h2>California</h2>
+						<li><h2>Imo</h2>
 							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
+								<li><h4>Owerri</h4></li>
+								<li><h4>Page 2</h4></li>
 							</ul></li>
 					</ul>
 				</div>
