--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -174,12 +174,12 @@
                             <li>
 								<div class="review_item">
                                 	<h3>From Beyonce Knowles the 16th September 2013</h3>
-                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed out stay.</p>
+                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed our stay.</p>
 								</div>
                             </li>
                             <li>
 								<div class="review_item">
-                                	<h3>From Julien Barbier the 1th August 2008</h3>
+                                	<h3>From Kaile Raymond the 1th August 2008</h3>
                                 	<p class="review_text">What a beautiful home! I had one of the best night's sleeps of my life and woke up with an idea!</p>
 								</div>
                             </li>
