--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -20,17 +20,17 @@
 				<button>Search</button>
 				<div class="locations">
 					<h3>States</h3>
-					<h4>California, Arizona...</h4>
+					<h4>FCT, Lagos, Osun</h4>
 					<ul class="popover">
-						<li><h2>Arizona</h2>
+						<li><h2>Lagos</h2>
 							<ul>
 								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
+								<li><h4>Page 2</h4></li>
 							</ul></li>
-						<li><h2>California</h2>
+						<li><h2>Imo</h2>
 							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
+								<li><h4>Owerri</h4></li>
+								<li><h4>Page 2</h4></li>
 							</ul></li>
 					</ul>
 				</div>
@@ -67,7 +67,7 @@
 							<p>1 Bathroom</p>
 						</div>
 					</div>
-					<div class="user"><b>Owner</b>: John Lennon</div>
+					<div class="user"><b>Owner</b>: Christian Bull</div>
 					<div class="description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     </div>
@@ -84,13 +84,13 @@
 						<ul>
 							<li>
 								<div class="review_item">
-									<h3>From Bob Dylan the 27th January 2017</h3>
+									<h3>From Gift Yash the 27th January 2017</h3>
 									<p class="review_text">Wow, what can I say?! I'm a real rolling stone, you may have heard, but - by golly - I'd just as well settle down in this humble home, if you'd part with it - course, I'm sure you wouldn't. Real shame too. Oh well...</p>
 								</div>
 							</li>
 							<li>
 								<div class="review_item">
-									<h3>From Justin Majetich the 28th April 1991</h3>
+									<h3>From Kingsley James the 28th April 1991</h3>
 									<p class="review_text">I was birthed in this here bathtub today!</p>
 								</div>
 							</li>
@@ -99,7 +99,7 @@
 				</article>
 				<article>
 					<div class="headline">
-						<h2 class="article_title">Tiny house</h2>
+						<h2 class="article_title">Little Apartment</h2>
 						<div class="price_by_night">$65</div>
 					</div>
 					<div class="information">
@@ -116,7 +116,7 @@
                             <p>1 Bathroom</p>
                         </div>
                     </div>
-					<div class="user"><b>Owner</b>: Adrienne</div>
+					<div class="user"><b>Owner</b>: Preet</div>
 					<div class="description">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </div>
@@ -132,7 +132,7 @@
                         <ul>
                             <li>
 								<div class="review_item">
-                                	<h3>From Bilbo Baggins the 6th June 2089</h3>
+                                	<h3>From Claire Baggins the 6th June 2089</h3>
                                 	<p class="review_text">The place was spotless, and Adrienne was an excellent host, leaving fresh biscuits out for my ravenous arrival.</p>
 								</div>
                             </li>
@@ -158,7 +158,7 @@
                             <p>2 Bathroom</p>
                         </div>
                     </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
+					<div class="user"><b>Owner</b>: Blessing Udeji</div>
 					<div class="description">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 					</div>
@@ -174,12 +174,12 @@
                             <li>
 								<div class="review_item">
                                 	<h3>From Beyonce Knowles the 16th September 2013</h3>
-                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed out stay.</p>
+                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed our stay.</p>
 								</div>
                             </li>
                             <li>
 								<div class="review_item">
-                                	<h3>From Julien Barbier the 1th August 2008</h3>
+                                	<h3>From Kaile Raymond the 1th August 2008</h3>
                                 	<p class="review_text">What a beautiful home! I had one of the best night's sleeps of my life and woke up with an idea!</p>
 								</div>
                             </li>
@@ -189,7 +189,7 @@
 			</section>
 		</div>
 		<footer>
-			<p>Holberton School</p>
+			<p>Best School</p>
 		</footer>
 	</body>
 </html>
