--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -12,18 +12,18 @@
 	</head>
     <body>
 		<header>
-			<div id="header_logo"></div>
+			<div class="header_logo"></div>
 		</header>
 		<div class="container">
 			<section class="filters">
 				<button>Search</button>
 				<div class="locations">
 					<h3>States</h3>
-					<h4>Federal Capital, Lagos States, Osun State</h4>
+					<h4>California, Arizona...</h4>
 				</div>
 				<div class="amenities">
 					<h3>Amenities</h3>
-					<h4>House Cleaning, Internet, Kitchen, Air Conditioner</h4>
+					<h4>Internet, Kitchen...</h4>
 				</div>
 
 			</section>
