--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -13,7 +13,7 @@
 	</head>
     <body>
 		<header>
-			<div id="header_logo"></div>
+			<div class="header_logo"></div>
 		</header>
 		<div class="container">
 			<section class="filters">
@@ -179,7 +179,7 @@
                             </li>
                             <li>
 								<div class="review_item">
-                                	<h3>From Julien Barbier the 1th August 2008</h3>
+                                	<h3>From Julien Barbier the 11th August 2008</h3>
                                 	<p class="review_text">What a beautiful home! I had one of the best night's sleeps of my life and woke up with an idea!</p>
 								</div>
                             </li>
