--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -1,195 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-
-		<link rel="shortcut icon" href="images/logo.png" >
-
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/100-places.css"/>
-	</head>
-    <body>
-		<header>
-			<div class="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>FCT, Lagos, Osun</h4>
-					<ul class="popover">
-						<li><h2>Lagos</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page 2</h4></li>
-							</ul></li>
-						<li><h2>Imo</h2>
-							<ul>
-								<li><h4>Owerri</h4></li>
-								<li><h4>Page 2</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="filter_amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
-
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">My home</h2>
-						<div class="price_by_night">$80</div>
-					</div>
-					<div class="information">
-						<div class="max_guest">
-							<div class="guest_icon"></div>
-							<p>2 Guests</p>
-						</div>
-						<div class="number_rooms">
-							<div class="bed_icon"></div>
-							<p>1 Bedroom</p>
-						</div>
-						 <div class="number_bathrooms">
-							<div class="bath_icon"></div>
-							<p>1 Bathroom</p>
-						</div>
-					</div>
-					<div class="user"><b>Owner</b>: Christian Bull</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-					<div class="amenities">
-						<h2 class="article_subtitle">Amenities</h2>
-						<ul>
-							<li><div class="tv_icon"></div>TV</li>
-							<li><div class="wifi_icon"></div>Wifi</li>
-							<li><div class="pet_icon"></div>Pet friendly</li>
-						</ul>
-					</div>
-					<div class="reviews">
-						<h2 class="article_subtitle">Reviews</h2>
-						<ul>
-							<li>
-								<div class="review_item">
-									<h3>From Gift Yash the 27th January 2017</h3>
-									<p class="review_text">Wow, what can I say?! I'm a real rolling stone, you may have heard, but - by golly - I'd just as well settle down in this humble home, if you'd part with it - course, I'm sure you wouldn't. Real shame too. Oh well...</p>
-								</div>
-							</li>
-							<li>
-								<div class="review_item">
-									<h3>From Kingsley James the 28th April 1991</h3>
-									<p class="review_text">I was birthed in this here bathtub today!</p>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">Little Apartment</h2>
-						<div class="price_by_night">$65</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>4 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>2 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>1 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Preet</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-					<div class="amenities">
-                        <h2 class="article_subtitle">Amenities</h2>
-                        <ul>
-                            <li><div class="tv_icon"></div>TV</li>
-                            <li><div class="wifi_icon"></div>Wifi</li>
-                        </ul>
-                    </div>
-                    <div class="reviews">
-                        <h2 class="article_subtitle">Reviews</h2>
-                        <ul>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Claire Baggins the 6th June 2089</h3>
-                                	<p class="review_text">The place was spotless, and Adrienne was an excellent host, leaving fresh biscuits out for my ravenous arrival.</p>
-								</div>
-                            </li>
-                        </ul>
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2 class="article_title">A suite</h2>
-						<div class="price_by_night">$180</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>5 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>3 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>2 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Blessing Udeji</div>
-					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-					<div class="amenities">
-                        <h2 class="article_subtitle">Amenities</h2>
-                        <ul>
-                            <li><div class="pet_icon"></div>Pet friendly</li>
-                        </ul>
-                    </div>
-                    <div class="reviews">
-                        <h2 class="article_subtitle">Reviews</h2>
-                        <ul>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Beyonce Knowles the 16th September 2013</h3>
-                                	<p class="review_text">Betty was a sweetheart. Jay, I and the kids thoroughly enjoyed our stay.</p>
-								</div>
-                            </li>
-                            <li>
-								<div class="review_item">
-                                	<h3>From Kaile Raymond the 1th August 2008</h3>
-                                	<p class="review_text">What a beautiful home! I had one of the best night's sleeps of my life and woke up with an idea!</p>
-								</div>
-                            </li>
-                        </ul>
-                    </div>
-				</article>
-			</section>
-		</div>
-		<footer>
-			<p>Best School</p>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viwport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles/4-common.css" />
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css" />
+    <link rel="stylesheet" type="text/css" href="styles/3-header.css" />
+    <link rel="stylesheet" type="text/css" href="styles/6-filters.css" />
+    <link rel="stylesheet" type="text/css" href="styles/101-places.css" />
+    <link rel="icon" type="image/png" href="images/icon.png" />
+    <title>AirBnB Clone</title>
+  </head>
+  <body>
+    <header></header>
+    <div class="container">
+      <section class="filters">
+        <button>Search</button>
+        <div class="filter-items">
+          <div class="locations">
+            <h3>States</h3>
+            <h4>FCT, Lagos, Osun...</h4>
+            <ul class="popover">
+              <li>
+                <h2>Lagos:</h2>
+                <ul>
+                  <li>Ikeja</li>
+                  <li>Ketu</li>
+                </ul>
+              </li>
+              <li>
+                <h2>FCT:</h2>
+                <ul>
+                  <li>Garki</li>
+                  <li>Apo</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="amenities">
+            <h3>Amenities</h3>
+            <h4>Internet, Kitchen..</h4>
+            <ul class="popover">
+              <li>Internet</li>
+              <li>Iron</li>
+              <li>TV</li>
+              <li>Kitchen</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="places">
+        <h1>Places</h1>
+        <article>
+          <h2>My home</h2>
+          <div class="price_by_night">N500k</div>
+          <div class="information">
+            <div class="max_guest">2 Guests</div>
+            <div class="number_rooms">1 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Blessing Udeji</div>
+          <div class="description">
+            <p>
+              Uncover a tranquil escape for your next vacation. Our inviting
+              lodgings offer a true home away from home, catering to those
+              looking for a budget-friendly holiday experience. Whether you're
+              exploring nearby attractions or simply unwinding, you'll find
+              everything you need right here.
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+              <li>
+                <div class="places_amenities_tv"></div>
+                Tv
+              </li>
+              <li>
+                <div class="places_amenities_wifi"></div>
+                Wifi
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Femi Asoko the 22nd August 2023</h3>
+                <p>I was really impressed by my experience here</p>
+              </li>
+              <li>
+                <h3>From Temidire Aluko the 23rd August 2023</h3>
+                <p>Highly impressive</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <h2>Tiny house</h2>
+          <div class="price_by_night">N50k</div>
+          <div class="information">
+            <div class="max_guest">4 Guests</div>
+            <div class="number_rooms">2 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Ogboye Samuel</div>
+          <div class="description">
+            <p>
+              Experience a serene getaway like no other. Nestled in the heart of
+              nature, our vacation rentals provide an idyllic setting that feels
+              just like home. Designed for those with budget-conscious travel
+              plans, you'll find affordable comfort and the perfect retreat for
+              your vacation.
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+              <li>
+                <div class="places_amenities_tv"></div>
+                Tv
+              </li>
+              <li>
+                <div class="places_amenities_wifi"></div>
+                Wifi
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Aishat Adeladun the 19th August 2023</h3>
+                <p>I was really impressed by my experience here</p>
+              </li>
+              <li>
+                <h3>From Yaro Abdul the 26th August 2023</h3>
+                <p>Highly impressive</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <h2>A suite</h2>
+          <div class="price_by_night">N45k</div>
+          <div class="information">
+            <div class="max_guest">3 Guests</div>
+            <div class="number_rooms">2 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner:</strong> Blessing Udeji</div>
+          <div class="description">
+            <p>
+              Discover the ultimate relaxation haven for your vacation. Our cozy
+              accommodations offer a home away from home, making it the perfect
+              destination for your much-needed getaway. Ideal for those seeking
+              low-budget holidays, you'll find a tranquil escape that won't
+              break the bank.
+            </p>
+          </div>
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <div class="places_amenities_pet_friendly"></div>
+                Pet friendly
+              </li>
+              <li>
+                <div class="places_amenities_tv"></div>
+                Tv
+              </li>
+              <li>
+                <div class="places_amenities_wifi"></div>
+                Wifi
+              </li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h2>Reviews</h2>
+            <ul>
+              <li>
+                <h3>From Aishat Adewoyin the 9th August 2023</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cumque minima sint odit id quis.</p>
+              </li>
+              <li>
+                <h3>From Oluwabukunmi Odemuyi the 5th August 2023</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, deleniti?</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+      </section>
+    </div>
+    <footer>
+      <p>Best School</p>
+    </footer>
+  </body>
 </html>
